[tool.poetry]
name = "aw-stats"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pandas = "*"
matplotlib = "*"
click = "*"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
